--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100"
+						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.jpg" class="d-block w-100"
 							alt="Photographie d'un homme en costume marchant sur un passage piéton">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100"
-							alt="Photographie de personnes assistant à un concert">
+						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min.jpg"
+							class="d-block w-100" alt="Photographie de personnes assistant à un concert">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100"
-							alt="Photograhpie d'un marie embrassant la mariée">
+						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min.jpg"
+							class="d-block w-100" alt="Photograhpie d'un marie embrassant la mariée">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -77,7 +77,7 @@
 		</div>
 		<div id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.png" alt="Portrait de Nina Carducci">
+				<img src="./assets/images/nina-min.png" alt="Portrait de Nina Carducci">
 			</div>
 			<div id="about-me">
 				<h3 class="about-me__title">A propos de moi</h3>
@@ -99,31 +99,31 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.jpg"
 						alt="Photographie d'un concert">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
+						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.jpg"
 						alt="Photographie d'un homme d'affaire en costume">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.jpg"
 						alt="Photographie d'une jeune femme souriante">
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.jpg"
 						alt="Photographie des mains des deux mariées montrant la bague de la mariée">
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.jpg"
 						alt="Photographie du portrait d'un homme fermant les yeux">
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.jpg"
 						alt="Photographie de deux jeunes mariées se tenant la main et souriant">
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.jpg"
 						alt="Photographie d'une jeune femme">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
+						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.jpg"
 						alt="Photographie d'un chanteur sur scène lors d'un concert">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.jpg"
 						alt="Photographie d'une femme souriant devant un ordinateur">
 				</div>
 			</div>
@@ -204,7 +204,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera.png" alt="Photographie d'un appareil photo ancien">
+					<img src="./assets/images/camera-min.png" alt="Photographie d'un appareil photo ancien">
 				</div>
 			</div>
 		</div>
