--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
 	<meta charset="UTF-8">
-	<script defer src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
+	<script async src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<script async src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
@@ -51,16 +51,17 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.jpg" class="d-block w-100"
+						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.jpg"
+							class="d-block w-100 h-100"
 							alt="Photographie d'un homme en costume marchant sur un passage piéton">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min.jpg"
-							class="d-block w-100" alt="Photographie de personnes assistant à un concert">
+							class="d-block w-100 h-100" alt="Photographie de personnes assistant à un concert">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min.jpg"
-							class="d-block w-100" alt="Photograhpie d'un marie embrassant la mariée">
+							class="d-block w-100 h-100" alt="Photograhpie d'un marie embrassant la mariée">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
