Compression des images >1Mb.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.jpg"
+						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp"
 							class="d-block w-100 h-100"
 							alt="Photographie d'un homme en costume marchant sur un passage piéton">
 					</div>
@@ -109,7 +109,7 @@
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.jpg"
 						alt="Photographie d'une jeune femme souriante">
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.jpg"
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp"
 						alt="Photographie des mains des deux mariées montrant la bague de la mariée">
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.jpg"
