--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp"
+						<img alt="Couverture du projet Sharlee" sizes="100vw"
+							srcset="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-320.webp 1135w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-640.webp 1513w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-1280.webp 2270w"
+							src="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp">
+						<!-- <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp"
 							class="d-block w-100 h-100"
-							alt="Photographie d'un homme en costume marchant sur un passage piéton">
+							alt="Photographie d'un homme en costume marchant sur un passage piéton"> -->
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min.webp"
