--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img alt="Couverture du projet Sharlee" sizes="100vw"
+						<img alt="" sizes="100vw"
 							srcset="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-320.webp 1135w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-640.webp 1513w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-1280.webp 2270w"
 							src="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp">
 						<!-- <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp"
