--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img alt="" sizes="100vw"
-							srcset="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-320.webp 1135w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-640.webp 1513w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-1280.webp 2270w"
-							src="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp">
+						<img srcset="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp 2056w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-L.webp 1920w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-M.webp 1024w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-S.webp 640w"
+							class="d-block w-100 h-100"
+							src="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp" alt="Un exemple">
 						<!-- <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp"
 							class="d-block w-100 h-100"
 							alt="Photographie d'un homme en costume marchant sur un passage piéton"> -->
