--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img srcset="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp 2056w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-L.webp 1920w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-M.webp 1024w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-S.webp 640w"
+						<img srcset="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp 2056w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-L.jpg 1920w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-M.jpg 1024w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-S.jpg 640w"
 							class="d-block w-100 h-100"
 							src="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp" alt="Un exemple">
 						<!-- <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp"
