Modification chemin image.

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img srcset="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp 2056w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-L.jpg 1920w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-M.jpg 1024w, /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-S.jpg 640w"
+						<img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp 2056w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-L.jpg 1920w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-M.jpg 1024w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-S.jpg 640w"
 							class="d-block w-100 h-100"
-							src="/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp" alt="Un exemple">
+							src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp" alt="Un exemple">
 						<!-- <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp"
 							class="d-block w-100 h-100"
 							alt="Photographie d'un homme en costume marchant sur un passage piéton"> -->
