--- a/index.html
+++ b/index.html
@@ -52,19 +52,29 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp 2056w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-L.jpg 1920w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-M.jpg 1024w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-S.jpg 640w"
-							class="d-block w-100 h-100"
+						<img srcset=". /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp 2056w,
+							./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-l.webp 1920w,
+							./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-m.webp 1024w,
+							./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-s.webp 640w" class="d-block w-100 h-100"
 							src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp" alt="Un exemple">
 						<!-- <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp"
 							class="d-block w-100 h-100"
 							alt="Photographie d'un homme en costume marchant sur un passage piéton"> -->
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min.webp"
+						<img srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min.webp 2056w,
+							./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min-l.webp 1920w,
+							./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min-m.webp 1024w,
+							./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min-s.webp 640w"
+							src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min.webp"
 							class="d-block w-100 h-100" alt="Photographie de personnes assistant à un concert">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min.webp"
+						<img srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min.webp 2056w,
+						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min-l.webp 1920w,
+						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min-m.webp 1024w,
+						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min-s.webp 640w"
+							src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min.webp"
 							class="d-block w-100 h-100" alt="Photograhpie d'un marie embrassant la mariée">
 					</div>
 				</div>
@@ -82,7 +92,9 @@
 		</div>
 		<div id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina-min.webp" alt="Portrait de Nina Carducci">
+				<img srcset="./assets/images/nina-min.webp 1920w,
+					./assets/images/nina-min-m.webp 1024w,
+					./assets/images/nina-min-s.webp 640w" src="./assets/images/nina-min.webp" alt="Portrait de Nina Carducci">
 			</div>
 			<div id="about-me">
 				<h3 class="about-me__title">A propos de moi</h3>
