--- a/index.html
+++ b/index.html
@@ -115,31 +115,49 @@
 			<h3 class="title">Portfolio</h3>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item"
+					<img data-gallery-tag="Concert" class="gallery-item" srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp 1920w,
+						./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min-m.webp 1024w,
+						./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp"
 						alt="Photographie d'un concert">
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp 1920w,
+					./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min-m.webp 1024w,
+					./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp"
 						alt="Photographie d'un homme d'affaire en costume">
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp 1920w,
+					./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min-m.webp 1024w,
+					./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp"
 						alt="Photographie d'une jeune femme souriante">
-					<img data-gallery-tag="Mariages" class="gallery-item"
+					<img data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp 1920w,
+					./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min-m.webp 1024w,
+					./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp"
 						alt="Photographie des mains des deux mariées montrant la bague de la mariée">
-					<img data-gallery-tag="Portrait" class="gallery-item"
+					<img data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp 1920w,
+					./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min-m.webp 1024w,
+					./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp"
 						alt="Photographie du portrait d'un homme fermant les yeux">
-					<img data-gallery-tag="Mariages" class="gallery-item"
+					<img data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp 1920w,
+					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min-m.webp 1024w,
+					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp"
 						alt="Photographie de deux jeunes mariées se tenant la main et souriant">
-					<img data-gallery-tag="Portrait" class="gallery-item"
+					<img data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp 1920w,
+					./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min-m.webp 1024w,
+					./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp"
 						alt="Photographie d'une jeune femme">
-					<img data-gallery-tag="Concert" class="gallery-item"
+					<img data-gallery-tag="Concert" class="gallery-item" srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp 1920w,
+					./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min-m.webp 1024w,
+					./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp"
 						alt="Photographie d'un chanteur sur scène lors d'un concert">
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp 1920w,
+					./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min-m.webp 1024w,
+					./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp"
 						alt="Photographie d'une femme souriant devant un ordinateur">
 				</div>
@@ -221,7 +239,10 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera-min.webp" alt="Photographie d'un appareil photo ancien">
+					<img srcset="./assets/images/camera-min.webp
+						1920w, ./assets/images/camera-min-m.webp
+						1024w, ./assets/images/camera-min-s.webp 840w" src="./assets/images/camera-min.webp"
+						alt="Photographie d'un appareil photo ancien">
 				</div>
 			</div>
 		</div>
