Restructuration HTML + ajout des balises meta pour instagram ainsi qu'un script js précisant les informations de la cliente.

--- a/index.html
+++ b/index.html
@@ -3,20 +3,31 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
-	<meta name="description" content="Portfolio de Nina Carducci présentant ces réalisations en tant que photographe">
+	<link rel="preload" href="./assets/bootstrap/bootstrap.css" as="style" />
+	<link rel="preload" href="./assets/style.css" as="style" />
+
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
+	<link rel="stylesheet" href="./assets/style.css" />
+	<meta name="description"
+		content="Portfolio de Nina Carducci. Vous cherchez un photographe dans votre région ? Shooting, retouches et création d'album">
+	<!-- Balise meta Instagram -->
+	<meta property="og:title" content="Nina Carducci" />
+	<meta property="og:type" content="article" />
+	<meta property="og:description" content="Photographe - Bordeaux" />
+	<meta property="author" content="Nina Carducci" />
+	<meta property="og:image" content="./assets/images/nina-min-s" />
+	<meta property="og:url" content="https://www.instagram.com/ninacarducci.photo/?hl=fr" />
+	<!--  -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
 	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+	<script src="./assets/maugallery.js" defer></script>
+	<script src="./assets/scripts.js" defer></script>
 	<title>Nina Carducci - Photographe</title>
 </head>
 
@@ -247,6 +258,25 @@
 			</div>
 		</div>
 	</footer>
+	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": ["LocalBusiness", "Service"],
+		  "image": "./assets/images/profil-600.webp",
+		  "priceRange" : "à partir de 50€",
+		  "address": {
+			"@type": "PostalAddress",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"streetAddress": "68 avenue Alsace-Lorraine"
+		  },
+  
+		  "description": "Photographe",
+		  "name": "Nina Carducci",
+		  "telephone": "0556677889"
+		}
+	  </script>
 </body>
 
 </html>
