--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 			</div>
 		</div>
 	</footer>
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.mini.js"></script>
 	<script type="application/ld+json">
 		{
 		  "@context": "https://schema.org",
