--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preload" href="./assets/bootstrap/bootstrap.css" as="style" />
-	<link rel="preload" href="./assets/style.css" as="style" />
+	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" />
+	<link rel="preload" href="./assets/style.min.css" as="style" />
 
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
-	<link rel="stylesheet" href="./assets/style.css" />
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+	<link rel="stylesheet" href="./assets/style.min.css" />
 	<meta name="description"
 		content="Portfolio de Nina Carducci. Vous cherchez un photographe dans votre région ? Shooting, retouches et création d'album">
 	<!-- Balise meta Instagram -->
