Test réglagle CLS.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		</div>
 		<div id="about">
 			<div class="picture left">
-				<img sizes="50vw" width="300" srcset="./assets/images/nina-min.webp 1920w,
+				<img sizes="50vw" srcset="./assets/images/nina-min.webp 1920w,
 					./assets/images/nina-min-m.webp 1024w,
 					./assets/images/nina-min-s.webp 640w" src="./assets/images/nina-min.webp" alt="Portrait de Nina Carducci">
 			</div>
