--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 <html lang="fr">
 
 <head>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" />
-	<link rel="preload" href="./assets/style.css" as="style" />
-
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
-	<link rel="stylesheet" href="./assets/style.css" />
+	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style">
+	<link rel="preload" href="./assets/style.css" as="style">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/style.css">
 	<meta name="description"
 		content="Portfolio de Nina Carducci. Vous cherchez un photographe dans votre région ? Shooting, retouches et création d'album">
 	<!-- Balise meta Instagram -->
-	<meta property="og:title" content="Nina Carducci" />
-	<meta property="og:type" content="article" />
-	<meta property="og:description" content="Photographe - Bordeaux" />
-	<meta property="author" content="Nina Carducci" />
-	<meta property="og:image" content="./assets/images/nina-min-s" />
-	<meta property="og:url" content="https://www.instagram.com/ninacarducci.photo/?hl=fr" />
+	<meta property="og:title" content="Nina Carducci">
+	<meta property="og:type" content="article">
+	<meta property="og:description" content="Photographe - Bordeaux">
+	<meta property="author" content="Nina Carducci">
+	<meta property="og:image" content="./assets/images/nina-min-s">
+	<meta property="og:url" content="https://www.instagram.com/ninacarducci.photo/?hl=fr">
 	<!--  -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet" defer>
-	<meta charset="UTF-8">
+		rel="stylesheet">
+
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.js" defer></script>
@@ -63,17 +63,15 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img srcset=". /assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp 2056w,
+						<img sizes="100vw" srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp 2056w,
 							./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-l.webp 1920w,
 							./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-m.webp 1024w,
 							./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min-s.webp 640w" class="d-block w-100 h-100"
-							src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp" alt="Un exemple">
-						<!-- <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp"
-							class="d-block w-100 h-100"
-							alt="Photographie d'un homme en costume marchant sur un passage piéton"> -->
+							src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-min.webp"
+							alt="Photographie d'un homme en costume marchant sur un passage piéton">
 					</div>
 					<div class="carousel-item">
-						<img srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min.webp 2056w,
+						<img sizes="100vw" srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min.webp 2056w,
 							./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min-l.webp 1920w,
 							./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min-m.webp 1024w,
 							./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-min-s.webp 640w"
@@ -81,10 +79,10 @@
 							class="d-block w-100 h-100" alt="Photographie de personnes assistant à un concert">
 					</div>
 					<div class="carousel-item">
-						<img srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min.webp 2056w,
-						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min-l.webp 1920w,
-						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min-m.webp 1024w,
-						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min-s.webp 640w"
+						<img sizes="100vw" srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min.webp 2056w,
+							./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min-l.webp 1920w,
+							./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min-m.webp 1024w,
+							./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min-s.webp 640w"
 							src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-min.webp"
 							class="d-block w-100 h-100" alt="Photograhpie d'un marie embrassant la mariée">
 					</div>
@@ -126,47 +124,47 @@
 			<h3 class="title">Portfolio</h3>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp 1920w,
+					<img sizes="100vw" data-gallery-tag="Concert" class="gallery-item" srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp 1920w,
 						./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min-m.webp 1024w,
 						./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp"
 						alt="Photographie d'un concert">
-					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp 1920w,
+					<img sizes="100vw" data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp 1920w,
 					./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min-m.webp 1024w,
 					./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp"
 						alt="Photographie d'un homme d'affaire en costume">
-					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp 1920w,
+					<img sizes="100vw" data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp 1920w,
 					./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min-m.webp 1024w,
 					./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp"
 						alt="Photographie d'une jeune femme souriante">
-					<img data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp 1920w,
+					<img sizes="100vw" data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp 1920w,
 					./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min-m.webp 1024w,
 					./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp"
 						alt="Photographie des mains des deux mariées montrant la bague de la mariée">
-					<img data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp 1920w,
+					<img sizes="100vw" data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp 1920w,
 					./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min-m.webp 1024w,
 					./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp"
 						alt="Photographie du portrait d'un homme fermant les yeux">
-					<img data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp 1920w,
+					<img sizes="100vw" data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp 1920w,
 					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min-m.webp 1024w,
 					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp"
 						alt="Photographie de deux jeunes mariées se tenant la main et souriant">
-					<img data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp 1920w,
+					<img sizes="100vw" data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp 1920w,
 					./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min-m.webp 1024w,
 					./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp"
 						alt="Photographie d'une jeune femme">
-					<img data-gallery-tag="Concert" class="gallery-item" srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp 1920w,
+					<img sizes="100vw" data-gallery-tag="Concert" class="gallery-item" srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp 1920w,
 					./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min-m.webp 1024w,
 					./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp"
 						alt="Photographie d'un chanteur sur scène lors d'un concert">
-					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp 1920w,
+					<img sizes="100vw" data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp 1920w,
 					./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min-m.webp 1024w,
 					./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min-s.webp 840w"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp"
@@ -250,7 +248,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img srcset="./assets/images/camera-min.webp
+					<img sizes="100vw" srcset="./assets/images/camera-min.webp
 						1920w, ./assets/images/camera-min-m.webp
 						1024w, ./assets/images/camera-min-s.webp 840w" src="./assets/images/camera-min.webp"
 						alt="Photographie d'un appareil photo ancien">
